--- a/b2bcalc/src/pages/about/about.scss
+++ b/b2bcalc/src/pages/about/about.scss
@@ -1,9 +1,9 @@
 $fvat-icon-img-margin-right:            41px !default;
 
 page-about {
-  .fvat-icon-img {
-    margin-top: $item-wp-padding-icon-top;
-    margin-bottom: $item-wp-padding-icon-bottom;
-    margin-right: 30px;
-  }
+  //.fvat-icon-img {
+  //  margin-top: $item-wp-padding-icon-top;
+  //  margin-bottom: $item-wp-padding-icon-bottom;
+  //  margin-right: 50px;
+  //}
 }
