label sizes changed

--- a/b2bcalc/src/pages/home/home.scss
+++ b/b2bcalc/src/pages/home/home.scss
@@ -1,3 +1,9 @@
 page-home {
-
+  .home-table-label {
+    font-size: 20px;
+    margin-top: 18px;
+  }
+  .home-table-label-input {
+    font-size: 30px;
+  }
 }
