--- a/b2bcalc/src/app/app.scss
+++ b/b2bcalc/src/app/app.scss
@@ -16,3 +16,4 @@
 // automatically applied to the <body> element in the app.
 
 @import "../pages/about/about.scss";
+@import "../pages/home/home.scss";
