vat/costs/profit + options header

--- a/b2bcalc/src/pages/home/home.scss
+++ b/b2bcalc/src/pages/home/home.scss
@@ -6,4 +6,8 @@ page-home {
   .home-table-label-input {
     font-size: 30px;
   }
+
+  .home-table-profit-row {
+    background-color: green;
+  }
 }
