--- a/b2bcalc/src/pages/home/home.scss
+++ b/b2bcalc/src/pages/home/home.scss
@@ -1,6 +1,6 @@
 page-home {
   .home-table-label {
-    font-size: 20px;
+    font-size: 19px;
     margin-top: 18px;
   }
   .home-table-label-input {
@@ -8,6 +8,6 @@ page-home {
   }
 
   .home-table-profit-row {
-    background-color: green;
+    background-color: color($colors, secondary);
   }
 }
