--- a/b2bcalc/src/theme/variables.scss
+++ b/b2bcalc/src/theme/variables.scss
@@ -31,6 +31,11 @@ $colors: (
   dark:       #222
 );
 
+$toolbar-background : color($colors, secondary);
+//$toolbar-border-color
+$toolbar-text-color : color($colors, light);
+//$toolbar-active-color
+//$toolbar-inactive-color
 
 // App iOS Variables
 // --------------------------------------------------
@@ -76,3 +81,4 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
