no bottom border in ionic row

--- a/b2bcalc/src/pages/home/home.scss
+++ b/b2bcalc/src/pages/home/home.scss
@@ -24,3 +24,10 @@ page-home {
 .arrow-options {
    transition: transform 0.3s ease-in-out;
 }
+
+//====== override default bottom border from ionic =============
+.item-md.item-block .item-inner {
+  padding-right: 8px;
+  border-bottom: 0px solid #dedede;
+}
+//====== endof: override default bottom border from ionic ======
